--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,6 +16,8 @@
     </head>
 
     <body>
+      <!-- <div id="vanta-bg"></div>  -->
+
         <div class="page-container">
             <nav class="top-icon-nav">
                 <button id="hamburger-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
