--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,16 @@
 </div>
 
 <footer>
-  <p>&copy; <%= new Date().getFullYear() %> [Alexandru Stoica]. All rights reserved. <%# Add design credit if desired %>
+  <p>&copy; <%= new Date().getFullYear() %> Alexandru Stoica. All rights reserved.
   </p>
 </footer>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.clouds.min.js"></script> 
+
 <script src="/js/theme.js"></script>
 <script src="/js/nav.js"></script> 
+<script src="/js/vanta-init.js"></script> 
 
 </body>
 
